<resources>
    <string name="app_name">NFrooms</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NFRooms</string>
    <string name="nav_header_subtitle">Disfruta el arte del silencio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_salas">Salas</string>
    <string name="menu_reserva">Reserva</string>
    <string name="menu_localizacion">Localización</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Informacion Salas -->>
    <string name="more_info"><u>Más información</u></string>
    <string name="email"><u>contacto@nfrooms.com</u></string>
    <string name="desc_kyoto">La sala Kyoto, es una sala insonorizada dedicada a espacios para baile y yoga.\n\nLa sala está equipada con un equipo de sonido, luces y una gran ventana con vistas a los jardines. Está disponible para clases y talleres.</string>
    <string name="desc_miami">La sala Miami es una sala de estilo moderno con un par de elegantes mesas de trabajo y cómodas sillas de oficina que, junto con las lámparas de lectura, crean un ambiente relajado y tranquilo.</string>
    <string name="desc_otawa">La sala Otawa es una sala dedicada al trabajo individual, es ideal para estudiantes que necesitan un lugar tranquilo para estudiar o para aquellos que necesitan un lugar para trabajar en silencio.\n\n La sala se encuentra en el segundo piso.</string>
    <string name="desc_berlin">Lorem Ipsum is simply dummy text of the printing and typesetting industry.\n\n Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <string name="title_activity_info_sala">InfoSala</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_sala">Sala</string>

    <string name="instalaciones">Foto del edificio de NFRooms</string>
    <string name="desc_loc">Dirección - NFRooms - Puerto Real \nAv. Universidad de Cádiz, 10, 11519 Puerto Real, Cádiz</string>
    <string name="hora_loc">Horario - NFRooms - Puerto Real \nAbrimos de lunes a sábado.\n09:00h a 21:00h.\nNo cerramos al mediodía.</string>
    <string name="consulta">Consultar</string>
    <string name="tren">Red de trenes</string>
    <string name="bus">Red de autobuses</string>
    <string name="botonMapa">Consultar mapa</string>

    <string-array name="languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>

    <string-array name="salas">
        <item>Sala Kyoto</item>
        <item>Sala Miami</item>
        <item>Sala Otawa</item>
        <item>Sala Berlin</item>
    </string-array>
</resources>