<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_salas"
            android:icon="@drawable/ic_round_dashboard_24"
            android:title="@string/menu_salas" />
        <item
            android:id="@+id/nav_ConsultarReserva"
            android:icon="@drawable/ic_round_search_24"
            android:title="@string/menu_consultarReserva" />
        <item
            android:id="@+id/nav_reserva"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_reserva" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_round_location_on_24"
            android:title="@string/menu_localizacion" />
    </group>
</menu>