<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="es.uca.nfrooms.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_salas"
        android:name="es.uca.nfrooms.ui.salas.SalasFragment"
        android:label="@string/menu_salas"
        tools:layout="@layout/fragment_salas" />

    <fragment
        android:id="@+id/nav_reserva"
        android:name="es.uca.nfrooms.ui.reserva.ReservaFragment"
        android:label="@string/menu_reserva"
        tools:layout="@layout/fragment_reserva" />

    <fragment
        android:id="@+id/nav_localizacion"
        android:name="es.uca.nfrooms.ui.localizacion.LocalizacionFragment"
        android:label="@string/menu_localizacion"
        tools:layout="@layout/fragment_localizacion" />
    <fragment
        android:id="@+id/nav_ConsultarReserva"
        android:name="es.uca.nfrooms.ui.ConsultarReserva.ConsultarReservaFragment"
        android:label="@string/menu_consultarReserva" />
</navigation>